@@ -1,9 +1,9 @@
 Package: bbmle
 Title: Tools for general maximum likelihood estimation
 Version: 0.9.7
-Date: 2010/10/01
-Author: Ben Bolker <bolker@ufl.edu>, R Development Core Team
-Maintainer: Ben Bolker <bolker@ufl.edu>
+Date: 2010/11/03
+Author: Ben Bolker <bolker@mcmaster.ca>, R Development Core Team
+Maintainer: Ben Bolker <bolker@mcmaster.ca>
 Depends: R (>= 2.0.0), methods, stats, graphics, stats4, numDeriv, lattice
 Suggests: aod, emdbook, rms, ggplot2, RUnit, MuMIn, AICcmodavg
 Description: Methods and functions for fitting maximum likelihood models in R.  This package modifies and extends the mle classes in the stats4 package.
